History of Asubst:

23/04/2006 V3_1
Add: Support \A for [:alpha:], \B for [:blank:]... in search pattern.

17/04/2006 V3_0
Add: Check if env variable LANG ends by ".UTF-8" then check env variable
     ASUBST_UTF8, then apply -u or -a option.

16/04/2006 V2_13
Add: -u or --utf8 for UTF-8 processing, and -a or --ascii for ASCII processing.
Bugfix: Invalid processing of \R00 if multiple regexps.
CHANGE: \R00 and \r0i become forbidden.

06/04/2006 V2_12
Bugfix: Exception in replace because string for replace must be full string
        and not matching string.

03/04/2006 V2_11
Add: Reject argument starting with "-" if it is not a valid option
     and if it is not after "--".

09/02/2006 V2_10
Add: Improve doc and help text.

22/12/2005 V2_9
Add: Options -f (--file) for file of files, and -m <max> (--max=<max>) for
     maximum of subtitutions per file.
Add: Count substitutions and lines with Long_Long.

21/12/2005 V2_8
Add: checks of access right on file prior to substitution.
Add: clean temp file in case of exception.
Bugfix: file name was always displayed if default verbosity (since V2_7).

19/12/2005 V2_7
Add: -n (--number) and -v (--verbose) options for putting number of
     substitutions and substitution details.

19/12/2005 V2_6
Add: Clear the help and version messages.

15/12/2005 V2_5
Add: Support \u, \l,\m and \c in replace pattern for upper/lower/mixed case
     conversion.

14/12/2005 V2_4
CHANGE: Replace \IJ by \RIJ in replace pattern for "string matching pattern"
        substitution.
Add: \rIJ in replace pattern fo substring of matching string substitution.

09/12/2005 V2_3
Add: Support for \s (for space) in both patterns.

07/12/2005 V2_2
Bugfix: \x0A in search pattern was not parsed as line delimiter.
Bugfix: One not multiple regex ("\n" of "^..." or "...$") was badly handled.

05/12/2005 V2_1
Add: Support for \t and \xIJ in search pattern.

04/12/2005 V2_0
Add: Support for \IJ and \xIJ in replace pattern.

02/12/2005 (V1.2)